gcc/fortran/primary.c
@@ -2148,18 +2148,17 @@ gfc_match_rvalue (gfc_expr **result)
       if (sym->ts.is_c_interop || sym->ts.is_iso_c)
 	break;
 
-      /* Variable array references to use associated derived type
-	 parameters cause all sorts of headaches in simplification.
-	 For this reason, we write the parameter to the module and
-	 treat them as variable references.  */  
-      if (sym->value && sym->ts.type == BT_DERIVED
-	    && sym->attr.use_assoc && e->ref)
+      /* Variable array references to derived type parameters cause
+	 all sorts of headaches in simplification. Treating such
+	 expressions as variable works just fine for all array
+	 references.  */
+      if (sym->value && sym->ts.type == BT_DERIVED && e->ref)
 	{
 	  for (ref = e->ref; ref; ref = ref->next)
 	    if (ref->type == REF_ARRAY)
 	      break;
 
-	  if (ref == NULL)
+	  if (ref == NULL || ref->u.ar.type == AR_FULL)
 	    break;
 
 	  ref = e->ref;
